Practica 3/k8s/gateway/gateway-service-fixed.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
  - port: 80
    targetPort: 3000
